Fix minor white background gaps

--- a/feedlish-night.less
+++ b/feedlish-night.less
@@ -1,14 +1,11 @@
 @import "feedlish.less";
 
 // Dark everyhting
+// FIXME: filter should have been on html, but it bugs !?
 body {
 	filter: hue-rotate(180deg) invert(100%) brightness(80%) contrast(75%);
 	-webkit-font-smoothing: antialiased;
 }
-html {
-	background: white;
-}
-// FIXME: filter should have been on html, but it bugs !?
 
 // Revert dark for images, icons, etc...
 iframe,
