--- a/feedlish.less
+++ b/feedlish.less
@@ -55,6 +55,8 @@
 body.ttrss_main, div.cdm.active div.content {
 	color: @default-fg;
 }
+// Fill gaps
+html { background: @default-bg; }
 
 // Normalize background color: use @default-bg
 .flat .dijitContentPane,
